# A-maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  bad_code.py  final_touches.txt  git_helper.txt  maze.txt  maze_display  testing.py
.github/workflows/: ci.yml
configuration/: config copy.txt  config.txt  gen_path.txt  logo.txt  maze_gen.txt
learning_shapes/: circle_logic.py  diamond_logic.py
learning_shapes:)/: circle_logic.py  diamond_logic.py
mazegen/: README.md  __init__.py  basic.txt  bfs_generator.py  default_generator.py  dfs_generator.py  huntkill_generator.py  maze_generator.py  perfect_generator.py  prim_generator.py  pyproject.toml  shape_generator.py  testing.py
mazegen/errors/: __init__.py  base_error.py  generation_error.py  initialization_error.py  shape_error.py  solver_error.py  validation_error.py
mazegen/generators/: __init__.py  bfs_generator.py  dfs_generator.py  huntkill_generator.py  maze_generator.py  prim_generator.py
mazegen/shape_constraints/: circle_shape.py  diamond_shape.py  heart_shape.py  shape_generator.py  star_shape.py
mazegen/shapes/: __init__.py  flower_shape.py  heart_shape.py  shape_generator.py  star_shape.py
mazegen/solvers/: __init__.py  astar_solver.py  bfs_solver.py  dfs_solver.py  greedy_solver.py  maze_solver.py  ucs_solver.py
output/: maze.txt  output_maze.txt
project/colors/: __init__.py  color.py
project/maze_displayer/: ascii_display.py  main.c  mlx.c  mlx_display.c  mlx_helper.h  mlx_helper_1.c  mlx_helper_2.c  mlx_parser.c
project/parsing/: parsing.py
tools/: output_validator.py
(+25 files in other folders)
