[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A reusable Python maze generator"
readme = "README.md"
authors = [{name = "Agnes Abi Moussa / Maya Fakih"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = []
[project.urls]
Repository = "https://github.com/your-repo/mazegen"